# BEST-Self-Enhancement-Learning-AI

./: .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEX.md  CONTEXT.md  CONTRIBUTING.md  Makefile  README.md  RELEASING.md  SECURITY.md  agent-orchestrator.yaml  bsela.code-workspace  pyproject.toml
.claude/: settings.json
.claude/agents/: bsela-implementer.md  bsela-ops-checker.md  bsela-reviewer.md  bsela-test-writer.md
.cursor/: BUGBOT.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: audit.yml  auto-merge.yml  ci.yml  claude.yml  mcp.yml
adapters/: README.md
adapters/claude/: README.md  settings.example.json  settings.local.example.json
adapters/codex/: README.md  config.toml
adapters/cursor/: README.md  mcp.json
adapters/windsurf/: README.md  mcp_config.json
config/: models.toml  thresholds.toml
config/launchd/: README.md  com.blackterminal.bsela.audit.plist  com.blackterminal.bsela.process.plist  com.blackterminal.bsela.report.plist
docs/: architecture.md  next-session-autonomous.md  roadmap.md
docs/decisions/: 0001-harness-over-weights.md  0002-single-agent-v1.md  0003-sqlite-over-postgres.md  0004-p3-updater-and-gate.md  0005-p5-router-and-auditor.md  0006-p6-mcp-and-adapters.md  0007-p7-replay-and-drift.md  0008-developer-orchestrator-workflow.md  0009-claude-agent-sdk-non-adoption.md  0010-replay-drift-informational.md  0011-externalized-lesson-status.md
docs/orchestrator/: ORCHESTRATOR.md  README.md
docs/orchestrator/roles/: builder.md  docs-handoff.md  git-release.md  mcp-integration.md  planner.md  qa-contract.md  review.md  test.md
docs/orchestrator/templates/: handoff.template.md
docs/prompts/: builder.md  debugger.md  failure-distiller.md  memory-updater.md  planner.md  researcher.md  reviewer.md  system.md
docs/reports/: audit-2026-05-03.json  audit-2026-05-03.md  dogfood-2026-05-03.md  replay-drift-2026-05-10.md
docs/research/: references.md
hooks/claude-code/: post-response.sh  stop.sh
hooks/codex/: session-end.sh
mcp/: .gitignore  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.build.json  tsconfig.json  vitest.config.ts
mcp/src/: bsela-client.ts  index.ts  server-tools.ts  server.ts
mcp/tests/: bsela-client.test.ts  parity.test.ts  server-tools.test.ts  server.test.ts
ops/: com.blackterminal.bsela.process.plist  install-launchd.sh
scripts/: bootstrap.sh  cloud-setup.sh  install-hooks.sh  sync-to-agents-md.sh
src/bsela/: __init__.py  __main__.py  cli.py
src/bsela/adapters/: __init__.py
src/bsela/core/: __init__.py  auditor.py  capture.py  detector.py  doctor.py  gate.py  hook_install.py  (+6 more)
tests/: conftest.py  test_adapter_claude_examples.py  test_auditor.py  test_capture.py  test_cli_decision.py  test_cli_help.py  test_cli_ingest.py  test_cli_review.py  test_cli_route_audit.py  test_cli_sessions.py  test_cli_smoke.py  test_config.py  test_detector.py  test_distiller.py  test_doctor.py  test_gate.py  test_hook.py  test_hook_install.py  test_llm_client.py  test_makefile_help.py  test_memory_models.py  test_models_config.py  test_package_imports.py  test_process.py  test_properties.py  test_replay.py  test_report.py  test_retention.py  test_router.py  test_updater.py
(+21 files in other folders)
