[project]
name = "bsela"
version = "0.0.1"
description = "Best Self-Enhancement Learning Agent — local continuous-learning control plane for coding AI agents."
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [
    { name = "Ingus Liepins", email = "subkoks@gmail.com" },
]
keywords = ["ai-agents", "claude-code", "codex", "cursor", "windsurf", "continual-learning", "self-improvement"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "typer>=0.25.1",
    "pydantic>=2.13.3",
    "sqlmodel>=0.0.22",
    "anthropic>=0.97.0",
    "rich>=13.9.0",
    "tomli-w>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "hypothesis>=6.152.4",
    "ruff>=0.15.12",
    "mypy>=1.20.2",
    "types-PyYAML",
]

[project.scripts]
bsela = "bsela.cli:app"

[project.urls]
Homepage = "https://github.com/subkoks/bsela"
Repository = "https://github.com/subkoks/bsela"
Issues = "https://github.com/subkoks/bsela/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bsela"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
    "N",   # pep8-naming
    "TID", # flake8-tidy-imports
    "PL",  # pylint
    "PT",  # pytest-style
]
ignore = [
    "PLR0913", # too many arguments
    "PLR2004", # magic value in comparison
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR2004", "S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.hypothesis]
# Use a deterministic profile in CI; locally keep the default (more examples).
# Override per-test with @settings(max_examples=N) for expensive properties.
suppress_health_check = ["too_slow"]

[tool.coverage.run]
source = ["src/bsela"]
branch = true

[tool.coverage.report]
fail_under = 99
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
